--- a/Dockerfile-sigul
+++ b/Dockerfile-sigul
@@ -1,2 +1,7 @@
-FROM fedora:26
-RUN dnf install -y python python-nss python-sqlalchemy
+FROM codenvy/ubuntu_jre
+
+RUN sudo apt-get update && \
+  sudo apt-get install -y gcc make python-pip zlibc zlib1g zlib1g-dev libssl-dev libnss3-tools python-nss python-sqlalchemy
+
+WORKDIR /projects
+CMD tailf /dev/null
